# SpiderX

./: .gitignore  README.md
android/: build.gradle  gradle.properties  gradlew  keystore  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: colors.xml  (+2 more)
android/gradle/wrapper/: gradle-wrapper.properties
android/movie-runtime-android/: build.gradle
android/movie-runtime-android/src/main/: AndroidManifest.xml
android/runtime-android/: build.gradle
android/runtime-android/src/main/: AndroidManifest.xml
doc/: DOC_DEVELOPER.md  DOC_USER.md  FishPluginDesign.md
javafx/: .gitignore  build.gradle  gradlew  settings.gradle
javafx/app/: build.gradle
javafx/gradle/wrapper/: gradle-wrapper.properties
javafx/movie-runtime-javafx/: build.gradle
javafx/runtime-javafx/: build.gradle
js/src/: runtime.js
jvm/: build.gradle  gradle.properties  gradlew  settings.gradle
jvm/compiler/: build.gradle  plugin.json  sample.js  settings.gradle
jvm/core/: build.gradle
jvm/core/src/main/resources/: build.properties
jvm/fdb/fdb-core/: build.gradle
jvm/installer/: build.gradle
jvm/movie-runtime/: build.gradle
jvm/packager/: README.md  build.gradle  plugin.fpk
jvm/runtime/: README.md  build.gradle  runtime.js  settings.gradle
jvm/tools/: build.gradle
native/fdb/: .gitignore  CMakeLists.txt  config.h.in  fdb_client_main.cpp  fdb_server_main.cpp  fdbd_main.cpp  tcp_client.h  tcp_common.cpp  tcp_common.h  tcp_server.h
native/fdb/core/: core.cpp  core.h
native/fdb/utils/: str_util.cpp  str_util.h
native/fdb/win/: CMakeLists.txt  tcp_client.cpp  tcp_server.cpp
sdk/: 插件模板2.0-alpha2-20220114.jsonc
sdk/js/: movie_runtime.js  runtime.js  runtime_core.js  runtime_movie.js  sdk.js
sdk/samples/movie/src/: PluginManifest.json  PluginManifest.xml  manifest.xsd
sdk/samples/movie/src/js/: category.js  detail.js  home.js  search.js
sdk/src/js/: sdk.js
tools/editor/: .gitignore  .gitmodules  LICENSE_APACHE.txt  README.md  build.gradle  gradlew  settings.gradle
tools/editor/app/: .gitignore  build.gradle  config.gradle  deploy.gradle  jfx-proguard-rules.pro
tools/editor/gradle/wrapper/: gradle-wrapper.properties
tools/editor/img/: logo.xcf
tools/editor/nesp-sdk-javafx/: build.gradle  settings.gradle
tools/editor/nesp-sdk-javafx/nesp-sdk-java/: build.gradle  gradle.properties  settings.gradle
tools/editor/nesp-sdk-javafx/nesp-sdk-java/app/: build.gradle
tools/editor/nesp-sdk-javafx/nesp-sdk-java/docs/: allclasses-frame.html  allclasses-index.html  allclasses-noframe.html  allpackages-index.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-search-index.js  script.js  search.js  serialized-form.html  stylesheet.css  type-search-index.js
tools/editor/nesp-sdk-javafx/nesp-sdk-kotlin/: build.gradle  gradle.properties  settings.gradle
tools/editor2/: build.gradle.kts  gradle.properties  settings.gradle.kts
tools/editor2/gradle/wrapper/: gradle-wrapper.properties
(+380 files in other folders)
